--- a/Security/Guidelines/OpenSSH.mediawiki
+++ b/Security/Guidelines/OpenSSH.mediawiki
@@ -2,8 +2,12 @@
   <tr>
     <td style="min-width: 25em;">__TOC__</td>
     <td style="vertical-align: top; padding-left: 1em;">
+'''STATUS: READY'''
+
 The goal of this document is to help operational teams with the configuration of OpenSSH server and client. All Mozilla
-sites and deployment should follow the recommendations below.  The Enterprise Information Security (Infosec, formerly
+sites and deployment should follow the recommendations below.
+
+The Enterprise Information Security (Infosec, formerly
 OpSec) team maintains this document as a reference guide for operational teams.
 
 Updates to this page should be submitted to the [https://github.com/mozilla/wikimo_opsec/ source repository on github].
@@ -62,7 +66,7 @@ LogLevel VERBOSE
 PermitRootLogin No
 
 # Use kernel sandbox mechanisms where possible in unprivilegied processes
-# Systrace on OpenBSD, Seccomp on Linux, seatbelt on MacOSX/Darwin, rlimit elsewhere. 
+# Systrace on OpenBSD, Seccomp on Linux, seatbelt on MacOSX/Darwin, rlimit elsewhere.
 UsePrivilegeSeparation sandbox
 </source>
 
@@ -92,7 +96,7 @@ RequiredAuthentications2 publickey
 LogLevel VERBOSE
 
 # Root login is not allowed for auditing reasons. This is because it's difficult to track which process belongs to which root user:
-# 
+#
 # On Linux, user sessions are tracking using a kernel-side session id, however, this session id is not recorded by OpenSSH.
 # Additionally, only tools such as systemd and auditd record the process session id.
 # On other OSes, the user session id is not necessarily recorded at all kernel-side.
@@ -108,7 +112,7 @@ It requires additional setup, such as using the [http://www.nongnu.org/oath-tool
 {| class="wikitable"
 |-
 ! <span style="color:red;">'''ATTENTION'''</span>
-|- 
+|-
 | In order to allow using one time passwords (OTPs) and any other text input, Keyboard-interactive is enabled in OpenSSH. This ''MAY'' allow for password authentication to work. It is therefore very important to check your PAM configuration so that PAM disallow password authentication for OpenSSH.
 |}
 
@@ -243,7 +247,7 @@ $ ssh-keygen -lf id_rsa
 {| class="wikitable"
 |-
 ! <span style="color:red;">'''ATTENTION'''</span>
-|- 
+|-
 | SSH Agent forwarding exposes your authentication to the server you're connecting to. By default, an attacker with control of the server (i.e. root access) can communicate with your agent and use your key to authenticate to other servers without any notification (i.e. impersonate you).<br />For this reason, one must be careful when using SSH agent forwarding. Defaulting to always forwarding the agent is strongly discouraged.<br /> Note also that while the attacker can use your key as long as the agent is running and forwarded, he cannot steal/download the key for offline/later use.
 |}
 
