Fix redundant comments

--- a/Security/Guidelines/Jenkins.mediawiki
+++ b/Security/Guidelines/Jenkins.mediawiki
@@ -20,7 +20,7 @@ Changes are detailed in the [https://github.com/mozilla/wikimo_opsec/commits/mas
 === Transport Encryption ===
 By default, the Jenkins web administration console is served over HTTP.  This allows a MiTM attacker to steal Jenkins administrative credentials.  To combat this, all Jenkins web applications should be served over HTTPS using a certificate for a trusted certificate authority.  If purchasing an certificate is deemed cost prohibitive, certificates can be obtained *FREE* from [https://letsencrypt.org/ Let's Encrypt].
 
-Additional configuration is required on the server instance to control the various TLS configuration settings that the Jenkins instance will support.  Any new Jenkins installations should implement a MODERN TLS configuration, as defined by the [https://wiki.mozilla.org/Security/Server_Side_TLS Mozilla Server Side TLS guide].  Mozilla also provides an SSL configuration generator [https://mozilla.github.io/server-side-tls/ssl-config-generator/ SSL configuration generator] to assist you in building of a MODERN configuration for your chosen web server to host Jenkins with.
+Additional configuration is required on the server instance to control the various TLS configuration settings that the Jenkins instance will support.  Any new Jenkins installations should implement a MODERN TLS configuration, as defined by the [https://wiki.mozilla.org/Security/Server_Side_TLS Mozilla Server Side TLS guide].  Mozilla also provides an [https://mozilla.github.io/server-side-tls/ssl-config-generator/ SSL configuration generator] to assist you in building of a MODERN configuration for your chosen web server to host Jenkins with.
 
 === Sensitive Path Restrictions ===
 *TODO* - Provide a list of sensitive paths and maybe some example configurations on how to restrict paths in different browsers
