--- a/Security/Guidelines/Jenkins.mediawiki
+++ b/Security/Guidelines/Jenkins.mediawiki
@@ -23,7 +23,37 @@ By default, the Jenkins web administration console is served over HTTP.  This al
 Additional configuration is required on the server instance to control the various TLS configuration settings that the Jenkins instance will support.  Any new Jenkins installations should implement a MODERN TLS configuration, as defined by the [https://wiki.mozilla.org/Security/Server_Side_TLS Mozilla Server Side TLS guide].  Mozilla also provides an [https://mozilla.github.io/server-side-tls/ssl-config-generator/ SSL configuration generator] to assist you in building of a MODERN configuration for your chosen web server to host Jenkins with.
 
 === Sensitive Path Restrictions ===
-*TODO* - Provide a list of sensitive paths and maybe some example configurations on how to restrict paths in different browsers
+There are a number of URL paths in Jenkins that expose attack surface on a Jenkins installation that you may not want, but are not often configurable within the application.  Depending on your specific use case of Jenkins, you may choose to block one or more of these paths to reduce this attack surface, which are commonly used by attackers to exploit configuration flaws and/or gather information that could be later used to assist in other types of attacks.
+
+Please note that the following paths are relative to the Jenkins application root.  So if you're Jenkins installation is reachable at /jenkins instead of the default /, you may need to make substitutions accordingly:
+
+- ./script
+- ./view/All/newJob
+- ./asynchPeople
+- ./systemInfo
+- ./api
+- ./restart
+- ./quietDown
+- ./user/jenkins
+- ./jnlpJars
+- ./asynchPeople
+- ./credential-store
+- ./job/[job_name]/[build_number]/injectedEnvVars/
+
+Such a restrictions can be implemented in any modern web server technology.  For example, this is how you can perform such path restrictions in nginx using the location directive:
+
+  # Restrict access to the following paths
+  location ^~ /(api|restart|quietDown|user/jenkins|jnlpJars|script|asynchPeople|credential-store|systemInfo|view/All/newJob) {
+    deny    all;
+  }
+
+  # Restrict access to injectedEnvVars paths
+  location ~* ^.+/injectedEnvVars/$ {
+    deny    all;
+  }
+
+It is recommended that you start with the full list of restricted paths and then remove restrictions as necessary to fit your desired use case.  Additionally, you may also consider restricting some paths by source IP to provide additional paths for users sourcing from specific source networks, such as those originating from an internal/VPN network.
+
 === Password Masking ===
 *TODO* - Ensure masking is enabled on all passwords.  In cases where this is not enabled, enable it and consider rotating the credentials.
 === Authentication ===
